Add IEX market data logic

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,7 +65,7 @@
         </main>
 
         <footer class="small text-center text-muted">
-            Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
+            Developed by <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Department</a>. View <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering">NYU FRE Terms of Use</a>.
         </footer>
 
     </body>
