--- a/templates/get_quote.html
+++ b/templates/get_quote.html
@@ -27,21 +27,13 @@
             
             
         </script>
-        <title>ajax2</title>
+        <title>Get Quote</title>
     </head>
     <body>
-            <!--why does the location of this line matters?-->
-            <form onsubmit="quote(); return false;">
-            <!--ask the user to input the symbol-->
-            <input autocomplete="off" autofocus id="symbol" placeholder="Symbol" type="text"/>
-            
-            <!--the get quote button-->
+		<form action="/quote" id="quote" method="post">
+            <input id="symbol" name="symbol" placeholder="Symbol" type="text"/>
             <input type="submit" value="Get Quote"/>
-            <!--return false--we don't want to submit the page, otherwiser, we will be directed to another page-->
-            
-
         </form>
-        <p id="quote"></p>
     </body>
 
 {%endblock%}
