--- a/templates/quote.html
+++ b/templates/quote.html
@@ -20,9 +20,9 @@
         <tbody>
                 <tr>
                     <td>{{dict['symbol']}}</td>
-                    <td>{{dict['bidPrice']}}</td>
+                    <td>{{dict['bidPrice']|usd}}</td>
                     <td>{{dict['bidSize']}}</td>
-                    <td>{{dict['askPrice']}}</td>
+                    <td>{{dict['askPrice']|usd}}</td>
                     <td>{{dict['askSize']}}</td>
                 </tr>
         
