--- a/templates/history.html
+++ b/templates/history.html
@@ -11,21 +11,19 @@
                     <th>Symbol</th>
                     <th>Shares</th>
                     <th>Price</th>
-                    <th>Transacted</th>
+                    <th>Timestamp</th>
                 </tr>
         </thead>
         
         <tbody>
     {% for i in range(length) %}
-            
                 <tr>
-                    <!--call the value from the dictionary-->
-                    <td>{{dict['Symbol'][i]}}</td>
-                    <td>{{dict['Shares'][i]}}</td>
-                    <td>{{dict['Price'][i]}}</td>
-                    <td>{{dict['transacted'][i]}}</td>
+                    <td>{{dict['symbol'][i]}}</td>
+                    <td>{{dict['shares'][i]}}</td>
+                    <td>{{dict['price'][i]}}</td>
+                    <td>{{dict['timestamp'][i]}}</td>
                 </tr>
-        {%endfor%}
+    {%endfor%}
     </tbody>
     </table>
 
