--- a/templates/register.html
+++ b/templates/register.html
@@ -12,6 +12,12 @@
             <div class="form-group">
                 <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
             </div>
+			<div class="form-group">
+                <input autocomplete="off" autofocus class="form-control" name="firstname" placeholder="Firstname" type="text"/>
+            </div>
+			<div class="form-group">
+                <input autocomplete="off" autofocus class="form-control" name="lastname" placeholder="Lastname" type="text"/>
+            </div>
             <div class="form-group">
                 <input class="form-control" name="password" placeholder="Password" type="password"/>
             </div>
