--- a/templates/history.html
+++ b/templates/history.html
@@ -1,17 +1,37 @@
-{%extends"layout.html"%}
+{%extends"base.html"%}
 
 {%block title%}
     History
 {%endblock%}
 
-{%block main%}
+{%block content%}
+<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+	<ul class="nav nav-pills flex-column">
+		<li class="nav-item">
+			<a class="nav-link" href="/">Portfolio</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/quote">Stock Quote</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/buy">Buy Stock</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/sell">Sell Stock</a>
+		</li>
+	</ul>
+</nav>
+
+<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
+	<h3>Transaction History</h3>
+	<div class="table-responsive">
     <table class="table table-striped">
         <thead>
                 <tr>
-                    <th>Symbol</th>
-                    <th>Shares</th>
-                    <th>Price</th>
-                    <th>Timestamp</th>
+                    <th style="text-align:center">Symbol</th>
+                    <th style="text-align:center">Shares</th>
+                    <th style="text-align:center">Price</th>
+                    <th style="text-align:center">Timestamp</th>
                 </tr>
         </thead>
         
