--- a/templates/sell.html
+++ b/templates/sell.html
@@ -1,10 +1,10 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
 {% block title %}
     Sell
 {% endblock %}
 
-{% block main %}
+{% block content %}
 
         
             
@@ -50,16 +50,36 @@
         </script>
         
      
-    
-    
     <body>
-       <form action="/sell" id="sell" method="post">
-            <input id="symbol" name="symbol" placeholder="Symbol" type="text"/>
-            <input id="shares" name="shares" placeholder="Shares" type="text"/>
-			<input id="price" name="price" placeholder="Price" type="text"/>
-            <input type="submit" value="Sell"/>
-        </form>
-    </body>    
-    
+		<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+			<ul class="nav nav-pills flex-column">
+				<li class="nav-item">
+					<a class="nav-link" href="/">Portfolio</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/quote">Stock Quote</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/buy">Buy Stock</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="/sell">Sell Stock</a>
+				</li>
+			</ul>
+		</nav>
+	
+		<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
+			<h3>Sell Stock Shares</h3>
+			<div class="form-group">
+				 <form action="/sell" id="sell" method="post">
+					<input id="symbol" name="symbol" placeholder="Symbol" type="text"/>
+					<input id="shares" name="shares" placeholder="Shares" type="text"/>
+					<input id="price" name="price" placeholder="Price" type="text"/>
+					<input type="submit" value="Sell"/>
+				</form>
+			</div>
+		</main>
+		
+    </body>  
     
 {%endblock%}
