--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 				{% if session.user_id %}
 					<ul class="navbar-nav mr-auto mt-2">
 						<li class="nav-item"><a class="nav-link" href="/">ManualTrading</a></li>
-						<li class="nav-item"><a class="nav-link" href="/build_model">StatArb</a></li>
+						<li class="nav-item"><a class="nav-link" href="/pair_trade_build_model">StatArb</a></li>
 						<li class="nav-item"><a class="nav-link" href="/sell">AITrading</a></li>
 						<li class="nav-item"><a class="nav-link" href="/history">History</a></li>
 					</ul>
