--- a/templates/pair_trade_probation_test.html
+++ b/templates/pair_trade_probation_test.html
@@ -3,13 +3,13 @@
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link" href="/build_model">Building Model</a>
+            <a class="nav-link" href="/pair_trade_build_model">Building Model</a>
         </li>
 		<li class="nav-item">
-            <a class="nav-link" href="/back_test">Back Testing</a>
+            <a class="nav-link" href="/pair_trade_back_test">Back Testing</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="/probation_test">Probation Testing</a>
+            <a class="nav-link active" href="/pair_trade_probation_test">Probation Testing</a>
         </li>
     </ul>
 </nav>
