--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 					<ul class="navbar-nav mr-auto mt-2">
 						<li class="nav-item"><a class="nav-link" href="/">ManualTrading</a></li>
 						<li class="nav-item"><a class="nav-link" href="/pair_trade_build_model">StatArb</a></li>
-						<li class="nav-item"><a class="nav-link" href="/sell">AITrading</a></li>
+						<li class="nav-item"><a class="nav-link" href="/ai_trading">AITrading</a></li>
 						<li class="nav-item"><a class="nav-link" href="/history">History</a></li>
 					</ul>
 					<ul class="navbar-nav ml-auto mt-2">
