--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
 					<ul class="navbar-nav mr-auto mt-2">
 						<li class="nav-item"><a class="nav-link" href="/">ManualTrading</a></li>
 						<li class="nav-item"><a class="nav-link" href="/pair_trade_build_model">StatArb</a></li>
-						<li class="nav-item"><a class="nav-link" href="/ai_trading">AITrading</a></li>
+						<li class="nav-item"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
 						<li class="nav-item"><a class="nav-link" href="/md_sp500">MarketData</a></li>
-						<li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+						<li class="nav-item"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
 					</ul>
 					<ul class="navbar-nav ml-auto mt-2">
 						<li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
