--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/sell">Sell Stock</a>
         </li>
+		<li class="nav-item">
+            <a class="nav-link" href="/history">History</a>
+        </li>
     </ul>
 </nav>
 
