--- a/templates/quote.html
+++ b/templates/quote.html
@@ -20,6 +20,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="/sell">Sell Stock</a>
 		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/history">History</a>
+		</li>
 	</ul>
 </nav>
 
