--- a/templates/sell.html
+++ b/templates/sell.html
@@ -65,6 +65,9 @@
 				<li class="nav-item">
 					<a class="nav-link active" href="/sell">Sell Stock</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/history">History</a>
+				</li>
 			</ul>
 		</nav>
 	
