--- a/templates/ai_modeling.html
+++ b/templates/ai_modeling.html
@@ -30,7 +30,7 @@
 					<td width="881" valign="top">
 						<p>
 							1) Create a chromosome (portfolio) of genes (stocks), one
-							stock per S&amp;P500 sector.
+							stock per S&amp;P500 sector
 						</p>
 					</td>
 				</tr>
@@ -38,7 +38,7 @@
 					<td width="881" valign="top">
 						<p>
 							2) Build 50 Initial parent portfolios from random selection
-							from the pool of S&amp;P500 composite stocks.
+							from the pool of S&amp;P500 composite stocks
 						</p>
 					</td>
 				</tr>
@@ -47,7 +47,7 @@
 						<p>
 							3) Construct a fitness function based on investment
 							parameters such as portfolio returns, risk, beta, yields,
-							Sharpe ratio, Treynor measure and Jensen measure.
+							Sharpe ratio, Treynor measure and Jensen measure
 						</p>
 					</td>
 				</tr>
@@ -55,7 +55,7 @@
 					<td width="881" valign="top">
 						<p>
 							4) Generate a child portfolio by crossover of two parent
-							chromosomes.
+							chromosomes
 						</p>
 					</td>
 				</tr>
@@ -63,7 +63,7 @@
 					<td width="881" valign="top">
 						<p>
 							5) Measure the fitness of chromosome of the child
-							portfolio.
+							portfolio
 						</p>
 					</td>
 				</tr>
@@ -71,14 +71,14 @@
 					<td width="881" valign="top">
 						<p>
 							6) Replace a parent portfolio by the child portfolio if it
-							has a higher fitness value.
+							has a higher fitness value
 						</p>
 					</td>
 				</tr>
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							7) Apply 3% mutation to chromosomes in each population.
+							7) Apply 3% mutation to chromosomes in each population
 						</p>
 					</td>
 				</tr>
@@ -86,7 +86,7 @@
 					<td width="881" valign="top">
 						<p>
 							8) Continue the crossover, selection and mutation cycle
-							from generation to generation.
+							from generation to generation
 						</p>
 					</td>
 				</tr>
@@ -95,14 +95,14 @@
 						<p>
 							9) Evaluate portfolios in each generation with fitness
 							function until the best portfolio is shown up or the max
-							number of generations is reached.
+							number of generations is reached
 						</p>
 					</td>
 				</tr>
 				<tr style="font-variant:small-caps;font-style:normal;color:black;font-size:20px;">
 					<th width="881" valign="top">
 						<p>
-							<strong>Market Data: </strong>
+							<strong>Market Data</strong>
 						</p>
 					</th>
 				</tr>
@@ -110,7 +110,7 @@
 					<td width="881" valign="top">
 						<p>
 							1) Use libcurl and Json to process daily price, fundamental
-							and index for S&amp;P 500 composite stocks.
+							and index for S&amp;P 500 composite stocks
 						</p>
 					</td>
 				</tr>
@@ -119,7 +119,7 @@
 						<p>
 							2) Use 10 years (1/1/2010-12/31/2019) of daily price data
 							for each S&amp;P 500 stock and SPY data for portfolio gene
-							and chromosome creation.
+							and chromosome creation
 						</p>
 					</td>
 				</tr>
