--- a/templates/pair_trade_build_model.html
+++ b/templates/pair_trade_build_model.html
@@ -22,6 +22,7 @@
             <tr>
                 <th style="text-align:center">Symbol1</th>
                 <th style="text-align:center">Symbol2</th>
+				<th style="text-align:center">Mean</th>
                 <th style="text-align:center">Volatility</th>
             </tr>
             </thead>
@@ -30,6 +31,7 @@
             <tr>
                 <td> {{pair.symbol1}}</td>
                 <td> {{pair.symbol2}}</td>
+				<td> {{pair.price_mean}}</td>
                 <td> {{pair.volatility}}</td>
             </tr>
             {% endfor %}
