Fix several issues with sim trading client

--- a/templates/sim_trading.html
+++ b/templates/sim_trading.html
@@ -5,14 +5,8 @@
 		<li class="nav-item">
             <a class="nav-link" href="/sim_server_up">Launch Server</a>
         </li>
-		<li class="nav-item">
-            <a class="nav-link" href="/sim_trading_adhoc">Adhoc Trading</a>
-        </li>
         <li class="nav-item">
-            <a class="nav-link" href="/sim_trading_auto">Auto Trading</a>
-        </li>
-		<li class="nav-item">
-            <a class="nav-link" href="/sim_client_down">Client Down</a>
+            <a class="nav-link" href="/sim_auto_trading">Auto Trading</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/sim_server_down">Stop Server</a>
