Add server logic into FRE_Platform

--- a/templates/apology.html
+++ b/templates/apology.html
@@ -4,7 +4,7 @@
     Apology
 {% endblock %}
 
-{% block main %}
+{% block content %}
     <!--img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png" title="{{ top }}"-->
     <img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://image.shutterstock.com/image-illustration/stock-market-chart-600w-252511228.jpg" title="{{ top }}"-->
 {% endblock %}
