Add first last name, flash for error handling and other changes

--- a/system/static/styles.css
+++ b/system/static/styles.css
@@ -59,3 +59,12 @@ main img
 	display: display: inline-block
 }
 
+.alert-error {
+  background-color: deepskyblue;
+  color: black;
+}
+
+.alert-info {
+  background-color: lightyellow;
+  color: black;
+}
