--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -9,7 +9,7 @@
 		<link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
 		<!--link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"-->
-		
+
 		<link href="/static/favicon.ico" rel="icon">
 		<link href="/static/styles.css" rel="stylesheet">
 
@@ -39,25 +39,24 @@
 					</ul>
 				{% else %}
 					<ul class="navbar-nav ml-auto mt-2">
-						<li><a href="{{ url_for('portfolio.register') }}">Register</a></li>
-						<li><a href="{{ url_for('portfolio.login') }}">Log In</a></li>
-						<!--li class="nav-item font-weight-bold"><a class="nav-link" href="/register">Register</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/login">Log In</a></li-->
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/register">Register</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/login">Log In</a></li>
 					</ul>
 				{% endif %}
 			</div>
 
-		</nav>	 
+		</nav>
 
-		{% if get_flashed_messages() %}
-			<header>
-				<div class="alert alert-primary border text-center" role="alert">
-					{{ get_flashed_messages() | join(" ") }}
-				</div>
-			</header>
-		{% endif %}
-		
 		<div class="container-fluid">
+			{% if get_flashed_messages() %}
+				<header>
+					<br></br>
+					<div class="alert alert-primary alert-error border text-center" role="alert">
+						{{ get_flashed_messages() | join(" ") }}
+					</div>
+				</header>
+			{% endif %}
+
 			<div class="row">
 				{% block content %} {% endblock %}
 			</div>
@@ -68,5 +67,5 @@
 		</footer>
 
 	</body>
-	
+
 </html>
