--- a/system/templates/email_confirmation.html
+++ b/system/templates/email_confirmation.html
@@ -7,5 +7,5 @@ activate your account:
 <a href="{{ confirm_url }}">{{ confirm_url }}</a>
 
 --
-Questions? Comments? Email stangny@gmail.com.
+Questions? Comments? Email FrePlatform@gmail.com.
 
