--- a/system/templates/email_password_reset.html
+++ b/system/templates/email_password_reset.html
@@ -1,6 +1,6 @@
 {# project/templates/email_password_reset.html #}
  
-You requested that the password for your Kennedy Family Recipes account be reset.
+You requested that the password for FRE Platform to be reset.
 Please click the link below to reset your password:
  
 <p>
@@ -9,6 +9,6 @@ Please click the link below to reset your password:
  
 <p>
 --<br>
-Questions? Comments? Email stangny@gmail.com.
+Questions? Comments? Email FrePlatform@gmail.com.
 </p>
 
