--- a/system/templates/password_reset_email.html
+++ b/system/templates/password_reset_email.html
@@ -7,18 +7,19 @@
 
 {% block main %}
 
-<div class="add-recipe">
-  <div class="page-header">
-    <h2>Email Address:</h2>
-  </div>
-  <form action="{{ url_for('reset') }}" method="POST">
-    {{ form.csrf_token }}
-    <dl>
-      {{ render_field(form.email, placeholder="Enter Email Address") }}
-    </dl>
-    <button class="btn btn-sm btn-success" type="submit">Submit</button>
-  </form>
-</div>
-
+<body>
+	<div class="add-recipe">
+		<div class="page-header">
+			<h2>Password Reset</h2>
+		</div>
+		<form action="{{ url_for('reset') }}" method="POST">
+			{{ form.csrf_token }}
+			<dl>
+				{{ render_field(form.email, placeholder="Enter Email Address") }}
+			</dl>
+			<button class="btn btn-sm btn-success" type="submit">Submit</button>
+		</form>
+	</div>
+</body>
 {% endblock %}
 
