--- a/system/templates/reset_password_with_token.html
+++ b/system/templates/reset_password_with_token.html
@@ -9,7 +9,7 @@
 
 <div class="add-recipe">
   <div class="page-header">
-    <h2>New Password:</h2>
+    <h2>Please Enter New Password</h2>
   </div>
   <form action="{{ url_for('reset_with_token', token=token) }}" method="POST">
     {{ form.csrf_token }}
