Enhance on server.py and bug fixes

--- a/system/static/styles.css
+++ b/system/static/styles.css
@@ -56,7 +56,7 @@ main img
 {
     /* constrain images on small screens */
     max-width: 100%;
-	display: display: inline-block
+	display: inline-block
 }
 
 .alert-error {
