--- a/system/templates/error_page.html
+++ b/system/templates/error_page.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+<!--nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
             <a class="nav-link active" href="/">Portfolio</a>
@@ -23,7 +23,7 @@
             <a class="nav-link" href="/history">History</a>
         </li>
     </ul>
-</nav>
+</nav-->
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
 <h3>{{message}}</h3>
