--- a/system/templates/buy.html
+++ b/system/templates/buy.html
@@ -8,7 +8,7 @@
 
         
             
-        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+
         
         <script>
          $(document).ready(function() {
@@ -50,25 +50,28 @@
         </script>
         
     <body>
-		<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-			<ul class="nav nav-pills flex-column">
-				<li class="nav-item">
-					<a class="nav-link" href="/">Portfolio</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/quote">Stock Quote</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="/buy">Buy Stock</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/sell">Sell Stock</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/history">History</a>
-				</li>
-			</ul>
-		</nav>
+        <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a class="nav-link " href="/">Introduction</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/quote">Stock Quote</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/buy">Buy Stock</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sell">Sell Stock</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/history">History</a>
+                </li>
+            </ul>
+        </nav>
 	
 		<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
 			<h3>Buy Stock Shares</h3>
