--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -7,23 +7,26 @@
 {% block content %}
 
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-	<ul class="nav nav-pills flex-column">
-		<li class="nav-item">
-			<a class="nav-link" href="/">Portfolio</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link active" href="/quote">Stock Quote</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/buy">Buy Stock</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/sell">Sell Stock</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/history">History</a>
-		</li>
-	</ul>
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a class="nav-link " href="/">Introduction</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="/quote">Stock Quote</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/buy">Buy Stock</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/sell">Sell Stock</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/history">History</a>
+        </li>
+    </ul>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
