- Verified Manual Trading logic - so far no mistakes
- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" in Quote Page

- TO DO:
   - Check "Quote size" in IEX document
   - Add "Avg Cost" and "Proportion" on Portfolio Page
   - When selling stocks, add PNL info, which can be shown in the History Page
   - Pie Chart for Portfolio

--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -40,6 +40,7 @@
 				<th style="text-align:center">Bid Size</th>
 				<th style="text-align:center">Ask Price</th>
 				<th style="text-align:center">Ask Size</th>
+				<th style="text-align:center">Latest Price</th>
 			</tr>
 			</thead>
 
@@ -50,6 +51,7 @@
 				<td>{{dict['bidSize']}}</td>
 				<td>{{dict['askPrice']|usd}}</td>
 				<td>{{dict['askSize']}}</td>
+				<td>{{dict['Latest Price']|usd}}</td>
 			</tr>
 			</tbody>
 		</table>
