- Verified Manual Trading logic - so far no mistakes
- Commented on functions related to Manual Trading parts within
   - app.py
   - fre_database.py

- Included "Latest Price" and "Market Status" in Quote Page

- Included "Proportion" on Portfolio Page

- Have checked "Quote size" in IEX document, still no clues for whether it is in "lot"(100 shares).

- TO DO:
   - Louis's review:
      1. Use f-string
      2. Fix SELECT *
      3. Delete test.txt
      4. Add typing to function header
      (Optional) make nested dictionary a class

   - Add "Avg Cost" on Portfolio Page, so we have PnL on each position
   - Pie Chart for Portfolio, bar plot for PnL on each position

--- a/system/templates/portfolio.html
+++ b/system/templates/portfolio.html
@@ -39,6 +39,7 @@
 					<th style="text-align:center">Shares</th>
 					<th style="text-align:center">Price</th>
 					<th style="text-align:center">Total</th>
+                    <th style="text-align:center">Proportion</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -50,7 +51,8 @@
                     <td>{{dict['name'][i]}}</td>
                     <td>{{dict['shares'][i]}}</td>
                     <td>{{dict['price'][i]}}</td>
-                    <td>{{dict['total'][i]}}</td>
+                    <td>{{dict['total'][i]|usd}}</td>
+                    <td>{{dict['proportion'][i]}}</td>
                 </tr>
                 <tr>
                     <!--;,is a place holder-->
@@ -62,6 +64,7 @@
 					<td>Cash</td>
 					<td colspan="3"></td>
 					<td>{{cash}}</td>
+                    <td>{{cash_proportion}}</td>
 				</tr>
 			</tbody>
 			<tfoot>
