--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -41,6 +41,7 @@
 				<th style="text-align:center">Ask Price</th>
 				<th style="text-align:center">Ask Size</th>
 				<th style="text-align:center">Latest Price</th>
+				<th style="text-align:center">Market Status</th>
 			</tr>
 			</thead>
 
@@ -52,6 +53,7 @@
 				<td>{{dict['askPrice']|usd}}</td>
 				<td>{{dict['askSize']}}</td>
 				<td>{{dict['Latest Price']|usd}}</td>
+				<td>{{dict['Market']}}</td>
 			</tr>
 			</tbody>
 		</table>
