1. Continued on fixing price logic;
2. Fixed the issue when price or size equals zero, user can still buy or sell. Now it will flash out that there is no counterparty available in the market.

3. Added Pie Chart of Proportion, which requires the package Plotly (requirement needs to update?)

--- a/system/templates/portfolio.html
+++ b/system/templates/portfolio.html
@@ -75,5 +75,17 @@
 			</tfoot>
 		</table>
     </div>
+<!--    <div>-->
+<!--        <img src={{ url }} alt="Image Placeholder" height="500" width="800">-->
+<!--    </div>-->
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <div id="pie" d3pie="0.2.1" style="margin: auto; text-align: center;">
+      <script>
+        var data = {{ graph_values|safe }};
+        layout = {{ layout|safe }};
+        Plotly.newPlot('pie', data, layout);
+      </script>
+    </div>
 </main>
 {% endblock %}
