--- a/system/templates/sim_auto_trading.html
+++ b/system/templates/sim_auto_trading.html
@@ -16,6 +16,8 @@
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
     <h3><strong>Auto Trading Report</strong></h3>
+    <br>
+    <button onclick="exportTableToCSV('AutoTradingReport.csv')" id="button-csv" style="float:left">Export to CSV File</button>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
