--- a/system/templates/error_auto_trading.html
+++ b/system/templates/error_auto_trading.html
@@ -6,16 +6,16 @@
             <a class="nav-link" href="/sim_server_up">Launch Server</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/sim_auto_trading">Auto Trading</a>
+            <a class="nav-link active" href="/sim_auto_trading">Auto Trading</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="/sim_server_down">Stop Server</a>
+            <a class="nav-link" href="/sim_server_down">Stop Server</a>
         </li>
     </ul>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3><strong>Server is down!</strong></h3>
+    <h3><strong>Please launch server first!</strong></h3>
 	<hr>
 </main>
 {% endblock %}
